# komPYoot

./: .gitignore  LICENSE  README.md  example.py  push.sh  requirements.txt  setup.cfg  setup.py
docs/: conf.py  generate_docs.sh  index.rst
docs/source/: komPYoot.api.rst  komPYoot.rst  modules.rst
docs/templates/: package.rst_t
komPYoot/: api.py
