[metadata]
name = komPYoot
version = 1.0.5
author = Nishad Mandlik
author_email = mandliksg@gmail.com
description = Python Interface for Komoot API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/matiyau/komPYoot
project_urls =
    Documentation = https://komPYoot.rtfd.io
    Bug Tracker = https://github.com/matiyau/komPYoot/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.10

[options.data_files]
. = requirements.txt

[upload_sphinx]
upload-dir = doc/_build/html
